<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/userDataHeader"
        android:layout_width="416dp"
        android:layout_height="190dp"
        android:background="@color/rojo_header"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/userDataLayout"
            android:layout_width="366dp"
            android:layout_height="110dp"

            android:background="@color/azul_user_data"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/imageViewUserIcon"
                android:layout_width="140dp"
                android:layout_height="95dp"
                android:layout_weight="1"
                android:contentDescription="@string/Avatar"

                app:srcCompat="@drawable/avatar"
                tools:ignore="ImageContrastCheck,VisualLintBounds" />

            <LinearLayout
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/textViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hola_user_name"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck,TextSizeCheck,VisualLintBounds" />

                <TextView
                    android:id="@+id/textViewUserLevel"
                    android:layout_width="211dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="@string/level_99"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    tools:ignore="NestedWeights,TextContrastCheck,TextSizeCheck,VisualLintBounds" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewTemas"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/temas"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="416dp"
        android:layout_height="538dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="15sp"
        app:layout_constraintTop_toBottomOf="@+id/userDataHeader"
        tools:ignore="MissingConstraints,UselessLeaf,VisualLintBounds"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:id="@+id/LayoutNumerosNaturales"
            android:layout_width="375dp"
            android:layout_height="186dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="163dp"
                android:background="@color/azul_claro"
                android:orientation="vertical"
                android:padding="8sp">


                <TextView
                    android:id="@+id/textViewNumerosNaturalesTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="Numeros Naturales"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purpura_text_highlight"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,TextContrastCheck" />

                <TextView
                    android:id="@+id/textViewNumerosNaturalesDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="¡Juega y aprende con ejercicios interactivos diseñados para ti!"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:ignore="HardcodedText,TextContrastCheck,TextSizeCheck" />

                <Button
                    android:id="@+id/btnMenuNumerosNaturales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/rojo_menu_boton"
                    android:text="Empezar!"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText,DuplicateSpeakableTextCheck,TextContrastCheck" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewNumerosNaturales"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription,VisualLintBounds,ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <LinearLayout
            android:id="@+id/LayoutOperacionesBasicas"
            android:layout_width="375dp"
            android:layout_height="186dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="163dp"
                android:background="@color/azul_claro"
                android:orientation="vertical"
                android:padding="8sp">


                <TextView
                    android:id="@+id/textViewOperacionesBasicasTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/Operaciones_Basicas"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purpura_text_highlight"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,TextContrastCheck" />

                <TextView
                    android:id="@+id/textViewOperacionesBasicasDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:text="¡Realiza juegos y desafíos para mejorar tus habilidades matemáticas!"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:ignore="HardcodedText,TextContrastCheck,TextSizeCheck" />

                <Button
                    android:id="@+id/btnMenuOperacionesBasicas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/rojo_menu_boton"
                    android:text="Empezar!"
                    android:textColor="@color/white"
                    tools:ignore="DuplicateIds,HardcodedText,TextContrastCheck" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewOperacionesBasicas"
                android:layout_width="173dp"
                android:layout_height="wrap_content"

                tools:ignore="ContentDescription,ImageContrastCheck,InefficientWeight,VisualLintBounds"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>